--- a/microsynth/microsynth.cmp
+++ b/microsynth/microsynth.cmp
@@ -1,67 +1,299 @@
-Cmp-Mod V01 Created by PcbNew   date = Friday, 17 April 2020 at 18:03:25
+Cmp-Mod V01 Created by PcbNew   date = Sunday, 26 April 2020 at 19:56:58
 
 BeginCmp
-TimeStamp = 5E908E59
-Path = /5E5B9865/5F2DFAB2
-Reference = SW8;
-ValeurCmp = SW_DPTT_SELECTOR-Switch;
-IdModule  = Buttons_Switches_ThroughHole:L203011MS02Q;
+TimeStamp = 5E88DC11
+Path = /5E475532/5E54028C
+Reference = RV4;
+ValeurCmp = 10k;
+IdModule  = Potentiometers:Potentiometer_Trimmer_Bourns_PV36W;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E898394
-Path = /5E5B9865/5E95BE3D
-Reference = SW9;
-ValeurCmp = TRIGGER;
-IdModule  = Buttons_Switches_ThroughHole:L203011MS02Q;
+TimeStamp = 5E88DC26
+Path = /5E475532/5E56CD05
+Reference = RV7;
+ValeurCmp = 47k;
+IdModule  = Potentiometers:Potentiometer_Trimmer_Bourns_PV36W;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA6899C
+Path = 
+Reference = REF**;
+ValeurCmp = SolderWirePad_1x01_Drill1.2mm;
+IdModule  = Connector_Wire:SolderWirePad_1x01_Drill1.2mm;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E866FFF
+Path = /5E475532/5EC3FB57
+Reference = RV27;
+ValeurCmp = 4.7kLOG;
+IdModule  = 4ms_Potentiometer:Pot_16mm_NoDet_RV16AF-4A;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA6DA16
+Path = 
+Reference = REF**;
+ValeurCmp = SolderWirePad_1x01_Drill1.2mm;
+IdModule  = Connector_Wire:SolderWirePad_1x01_Drill1.2mm;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA68FEF
+Path = 
+Reference = REF**;
+ValeurCmp = MountingHole_3.2mm_M3;
+IdModule  = MountingHole:MountingHole_3.2mm_M3;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA68FA0
+Path = 
+Reference = REF**;
+ValeurCmp = MountingHole_3.2mm_M3;
+IdModule  = MountingHole:MountingHole_3.2mm_M3;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA68F5D
+Path = 
+Reference = REF**;
+ValeurCmp = MountingHole_3.2mm_M3;
+IdModule  = MountingHole:MountingHole_3.2mm_M3;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA68F25
+Path = 
+Reference = REF**;
+ValeurCmp = MountingHole_3.2mm_M3;
+IdModule  = MountingHole:MountingHole_3.2mm_M3;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA68EED
+Path = 
+Reference = REF**;
+ValeurCmp = MountingHole_3.2mm_M3;
+IdModule  = MountingHole:MountingHole_3.2mm_M3;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA68E9E
+Path = 
+Reference = REF**;
+ValeurCmp = MountingHole_3.2mm_M3;
+IdModule  = MountingHole:MountingHole_3.2mm_M3;
 EndCmp
 
 BeginCmp
 TimeStamp = 5E867153
 Path = /5E475532/5E4ABA98
 Reference = SW6;
-ValeurCmp = SW_DPTT_SELECTOR;
-IdModule  = Buttons_Switches_ThroughHole:L203011MS02Q;
+ValeurCmp = VCO2 MODE;
+IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E99E55E
-Path = /5E475532/5E4C21F7
-Reference = SW4;
-ValeurCmp = SW_DPTT_SELECTOR;
-IdModule  = Buttons_Switches_ThroughHole:L203011MS02Q;
+TimeStamp = 5E898394
+Path = /5E5B9865/5E95BE3D
+Reference = SW9;
+ValeurCmp = ENV TRIGGER;
+IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E9B1B2E
-Path = /5E475532/5E4BC6EF
-Reference = SW3;
-ValeurCmp = SW_DPTT_SELECTOR;
-IdModule  = Buttons_Switches_ThroughHole:L203011MS02Q;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E954DCD
-Path = /5E8C1704/5E91DC50
-Reference = SW1;
-ValeurCmp = DRIFT;
-IdModule  = Buttons_Switches_ThroughHole:L203011MS02Q;
+TimeStamp = 5E908E59
+Path = /5E5B9865/5F2DFAB2
+Reference = SW8;
+ValeurCmp = ENV SUSTAIN;
+IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
 EndCmp
 
 BeginCmp
 TimeStamp = 5E8671CE
 Path = /5E475532/5EC8F4DB
 Reference = SW13;
-ValeurCmp = THUMBWEEL;
-IdModule  = Buttons_Switches_ThroughHole:L203011MS02Q;
+ValeurCmp = THUMBWEEL DST;
+IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
 EndCmp
 
 BeginCmp
 TimeStamp = 5E8950EC
 Path = /5E475532/5EC4EDF0
 Reference = SW12;
-ValeurCmp = SOURCE;
-IdModule  = Buttons_Switches_ThroughHole:L203011MS02Q;
+ValeurCmp = THUMBWHEEL SRC;
+IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA1B89D
+Path = /5E8C1704/5E91DC50
+Reference = SW1;
+ValeurCmp = DRIFT;
+IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA5E869
+Path = /5E475532/5E4C21F7
+Reference = SW4;
+ValeurCmp = SUB OSC FIRST;
+IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA5E7E6
+Path = /5E475532/5E4BC6EF
+Reference = SW3;
+ValeurCmp = VCO1 SHAPE;
+IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E8C7DCA
+Path = /5E05EC3F/5F1FC317
+Reference = J2;
+ValeurCmp = Conn_01x03_Male;
+IdModule  = Connector_PinHeader_2.54mm:PinHeader_1x03_P2.54mm_Vertical;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E8B3EBD
+Path = /5E5B9865/5E6E5015
+Reference = SW7;
+ValeurCmp = ENV ADSR;
+IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E86713D
+Path = /5E475532/5E4C83B7
+Reference = SW5;
+ValeurCmp = SUB OSC SEC;
+IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA4CD14
+Path = /5E05E45F/5E119FA2
+Reference = SW11;
+ValeurCmp = VCF MODE;
+IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E884396
+Path = /5E5B9865/5E83D5A9
+Reference = SW20-ENV-TO-KEYB1;
+ValeurCmp = ENV MOD KBD;
+IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA4A784
+Path = /5E475532/5E48280C
+Reference = SW14;
+ValeurCmp = VCO2 MOD KBD;
+IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E8671F4
+Path = /5E475532/5E483096
+Reference = SW15;
+ValeurCmp = VCO2 MOD VCO1;
+IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E867207
+Path = /5E475532/5E483FEC
+Reference = SW16;
+ValeurCmp = VCO2 MOD VCF;
+IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E86721A
+Path = /5E475532/5E483FF2
+Reference = SW17;
+ValeurCmp = VCO2 MOD VCA;
+IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E86726D
+Path = /5E5B9865/5E881667
+Reference = SW18-ENV-TO-VCF1;
+ValeurCmp = ENV MOD VCF;
+IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E867280
+Path = /5E5B9865/5E85AAE1
+Reference = SW19-ENV-TO-VCO1;
+ValeurCmp = ENV MOD VCO2;
+IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA47AA2
+Path = /5E05E45F/5E076B1B
+Reference = SW10;
+ValeurCmp = VCF KBD MOD;
+IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E866C21
+Path = /5E8C1704/5E941296
+Reference = R141;
+ValeurCmp = 10K;
+IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E86626D
+Path = /5E8C1704/5E91BD99
+Reference = R31;
+ValeurCmp = 10M;
+IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E939A98
+Path = /5E1B03E8/5E1DFBA9
+Reference = RV26;
+ValeurCmp = 10kLOG;
+IdModule  = Connector_PinHeader_2.54mm:PinHeader_1x03_P2.54mm_Vertical;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA0A502
+Path = /5E1B03E8/5EA25E4A
+Reference = J8;
+ValeurCmp = AudioJack2;
+IdModule  = Connector_PinHeader_2.54mm:PinHeader_1x02_P2.54mm_Vertical;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA0A4C1
+Path = /5E1B03E8/5ED55CB0
+Reference = J1;
+ValeurCmp = AudioJack3;
+IdModule  = Connector_PinHeader_2.54mm:PinHeader_1x03_P2.54mm_Vertical;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E866182
+Path = /5E5B9865/5E696D71
+Reference = Q3;
+ValeurCmp = BC548;
+IdModule  = Package_TO_SOT_THT:TO-92L_Inline_Wide;
 EndCmp
 
 BeginCmp
@@ -81,15 +313,7 @@ IdModule  = Connector_PinHeader_2.54mm:PinHeader_1x04_P2.54mm_Vertical;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E939A98
-Path = /5E1B03E8/5E1DFBA9
-Reference = RV26;
-ValeurCmp = 10kLOG;
-IdModule  = 4ms_Potentiometer:Pot_16mm_NoDet_RV16AF-4A;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E866C66
+TimeStamp = 5EA0AB00
 Path = /5E1B03E8/5E1E59EE
 Reference = R144;
 ValeurCmp = 2.7;
@@ -97,7 +321,7 @@ IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E90B488
+TimeStamp = 5EA10CA4
 Path = /5E8C1704/5E940A1E
 Reference = R140;
 ValeurCmp = 10K;
@@ -177,14 +401,6 @@ IdModule  = Potentiometers:Potentiometer_Trimmer_Bourns_PV36W;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E88DC11
-Path = /5E475532/5E54028C
-Reference = RV4;
-ValeurCmp = 10k;
-IdModule  = Potentiometers:Potentiometer_WirePads_Small;
-EndCmp
-
-BeginCmp
 TimeStamp = 5E866DFD
 Path = /5E475532/5E59ABC4
 Reference = RV8;
@@ -213,14 +429,6 @@ TimeStamp = 5E8B916D
 Path = /5E05E45F/5E108D17
 Reference = R149;
 ValeurCmp = 10k;
-IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E866C21
-Path = /5E8C1704/5E941296
-Reference = R141;
-ValeurCmp = 10K;
 IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
@@ -377,14 +585,6 @@ IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E8C7DCA
-Path = /5E05EC3F/5F1FC317
-Reference = J2;
-ValeurCmp = Conn_01x03_Male;
-IdModule  = Connector_PinHeader_2.54mm:PinHeader_1x03_P2.54mm_Horizontal;
-EndCmp
-
-BeginCmp
 TimeStamp = 5E86746B
 Path = /5E222DC1/5EDDB65C
 Reference = U14;
@@ -438,14 +638,6 @@ Path = /5E475532/5E4793CB
 Reference = SW2;
 ValeurCmp = RANGE;
 IdModule  = MyKi_TH_Panel_Controls:SW_Rotary4+12;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E93AFCA
-Path = /5E1B03E8/5ED55CB0
-Reference = J1;
-ValeurCmp = AudioJack3;
-IdModule  = 4ms_Jack:EighthInch_Stereo_PJ366ST_ALT;
 EndCmp
 
 BeginCmp
@@ -641,7 +833,7 @@ IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E865E4F
+TimeStamp = 5EA0AAC2
 Path = /5E1B03E8/5E21EF44
 Reference = C33;
 ValeurCmp = 100n;
@@ -753,14 +945,6 @@ IdModule  = Package_TO_SOT_THT:TO-92L_Inline_Wide;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E866182
-Path = /5E5B9865/5E696D71
-Reference = Q3;
-ValeurCmp = BC548;
-IdModule  = Package_TO_SOT_THT:TO-92L_Inline_Wide;
-EndCmp
-
-BeginCmp
 TimeStamp = 5E8855E9
 Path = /5E05E45F/5E068A19
 Reference = Q4;
@@ -829,14 +1013,6 @@ TimeStamp = 5E89C73F
 Path = /5E8C1704/5E8F8EE5
 Reference = R30;
 ValeurCmp = 1k;
-IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E86626D
-Path = /5E8C1704/5E91BD99
-Reference = R31;
-ValeurCmp = 10M;
 IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
@@ -1089,7 +1265,7 @@ IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E86668F
+TimeStamp = 5EA51743
 Path = /5E222DC1/5E2346A8
 Reference = R77;
 ValeurCmp = 44k;
@@ -1489,7 +1665,7 @@ IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E866C38
+TimeStamp = 5EA4F62F
 Path = /5E2BE1AD/5E2EFF2B
 Reference = R142;
 ValeurCmp = 29k;
@@ -1497,7 +1673,7 @@ IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E90B5B5
+TimeStamp = 5EA6607F
 Path = /5E2BE1AD/5E2F04B9
 Reference = R143;
 ValeurCmp = 15k;
@@ -1505,7 +1681,7 @@ IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E866C7D
+TimeStamp = 5EA0AA82
 Path = /5E1B03E8/5E1E625A
 Reference = R145;
 ValeurCmp = 470;
@@ -1513,7 +1689,7 @@ IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E866C94
+TimeStamp = 5EA0AA40
 Path = /5E1B03E8/5E1E55AC
 Reference = R146;
 ValeurCmp = 470;
@@ -1657,14 +1833,6 @@ IdModule  = Potentiometers:Potentiometer_Trimmer_Bourns_PV36W;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E866FFF
-Path = /5E475532/5EC3FB57
-Reference = RV27;
-ValeurCmp = 4.7kLOG;
-IdModule  = 4ms_Potentiometer:Pot_16mm_NoDet_RV16AF-4A;
-EndCmp
-
-BeginCmp
 TimeStamp = 5E89A85F
 Path = /5E475532/5EC021D9
 Reference = RV28;
@@ -1673,7 +1841,7 @@ IdModule  = 4ms_Potentiometer:Pot_16mm_NoDet_RV16AF-4A;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E867041
+TimeStamp = 5EA5DEEF
 Path = /5E8C1704/5E936F79
 Reference = RV1-TUNE1;
 ValeurCmp = 100k;
@@ -1721,70 +1889,6 @@ IdModule  = 4ms_Potentiometer:Pot_16mm_NoDet_RV16AF-4A;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E86713D
-Path = /5E475532/5E4C83B7
-Reference = SW5;
-ValeurCmp = SW_SPDT;
-IdModule  = 4ms:SPDT_KIT;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E8B3EBD
-Path = /5E5B9865/5E6E5015
-Reference = SW7;
-ValeurCmp = SW_SPDT;
-IdModule  = 4ms:SPDT_KIT;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E86718F
-Path = /5E05E45F/5E076B1B
-Reference = SW10;
-ValeurCmp = SW_SPST;
-IdModule  = 4ms:SPDT_KIT;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E8671A2
-Path = /5E05E45F/5E119FA2
-Reference = SW11;
-ValeurCmp = SW_SPDT;
-IdModule  = 4ms:SPDT_KIT;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E8671E1
-Path = /5E475532/5E48280C
-Reference = SW14;
-ValeurCmp = SW_SPDT;
-IdModule  = 4ms:SPDT_KIT;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E8671F4
-Path = /5E475532/5E483096
-Reference = SW15;
-ValeurCmp = SW_SPDT;
-IdModule  = 4ms:SPDT_KIT;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E867207
-Path = /5E475532/5E483FEC
-Reference = SW16;
-ValeurCmp = SW_SPDT;
-IdModule  = 4ms:SPDT_KIT;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E86721A
-Path = /5E475532/5E483FF2
-Reference = SW17;
-ValeurCmp = SW_SPDT;
-IdModule  = 4ms:SPDT_KIT;
-EndCmp
-
-BeginCmp
 TimeStamp = 5E867231
 Path = /5E475532/5E476048
 Reference = SW21;
@@ -1797,30 +1901,6 @@ TimeStamp = 5E867244
 Path = /5E222DC1/5E26DDD4
 Reference = SW22;
 ValeurCmp = SW_SPST;
-IdModule  = 4ms:SPDT_KIT;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E86726D
-Path = /5E5B9865/5E881667
-Reference = SW18-ENV-TO-VCF1;
-ValeurCmp = SW_SPDT;
-IdModule  = 4ms:SPDT_KIT;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E867280
-Path = /5E5B9865/5E85AAE1
-Reference = SW19-ENV-TO-VCO1;
-ValeurCmp = SW_SPDT;
-IdModule  = 4ms:SPDT_KIT;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E884396
-Path = /5E5B9865/5E83D5A9
-Reference = SW20-ENV-TO-KEYB1;
-ValeurCmp = SW_SPDT;
 IdModule  = 4ms:SPDT_KIT;
 EndCmp
 
@@ -1969,7 +2049,7 @@ IdModule  = Package_DIP:DIP-14_W7.62mm_LongPads;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E93AD5B
+TimeStamp = 5EA0A9E8
 Path = /5E1B03E8/5E1E7AED
 Reference = U23;
 ValeurCmp = LM380N;
@@ -1990,14 +2070,6 @@ Path = /5E8C1704/5E9E2792
 Reference = R2;
 ValeurCmp = 680;
 IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E93AF85
-Path = /5E1B03E8/5EA25E4A
-Reference = J8;
-ValeurCmp = AudioJack2;
-IdModule  = 4ms_Jack:EighthInch_Stereo_PJ366ST_ALT;
 EndCmp
 
 BeginCmp
@@ -2033,7 +2105,7 @@ IdModule  = Capacitor_THT:CP_Radial_D5.0mm_P2.50mm;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E93AB8E
+TimeStamp = 5EA0A8C1
 Path = /5E1B03E8/5E1E2474
 Reference = C31;
 ValeurCmp = 4.7u;
@@ -2041,7 +2113,7 @@ IdModule  = Capacitor_THT:CP_Radial_D5.0mm_P2.50mm;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E8B59CF
+TimeStamp = 5EA0A738
 Path = /5E1B03E8/5E1E483E
 Reference = C32;
 ValeurCmp = 4.7u;
@@ -2049,7 +2121,7 @@ IdModule  = Capacitor_THT:CP_Radial_D5.0mm_P2.50mm;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E8B5A52
+TimeStamp = 5EA0A5AF
 Path = /5E1B03E8/5E1E3E6A
 Reference = C34;
 ValeurCmp = 470u;
@@ -2070,14 +2142,6 @@ Path = /5E222DC1/5E920B31
 Reference = U5;
 ValeurCmp = LF347;
 IdModule  = Package_DIP:DIP-14_W7.62mm_LongPads;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E88DC26
-Path = /5E475532/5E56CD05
-Reference = RV7;
-ValeurCmp = 47k;
-IdModule  = Potentiometers:Potentiometer_WirePads_Small;
 EndCmp
 
 EndListe
