--- a/microsynth/microsynth.cmp
+++ b/microsynth/microsynth.cmp
@@ -1,41 +1,257 @@
-Cmp-Mod V01 Created by PcbNew   date = Sunday, 26 April 2020 at 19:56:58
+Cmp-Mod V01 Created by PcbNew   date = Wednesday, 29 April 2020 at 23:47:08
 
 BeginCmp
-TimeStamp = 5E88DC11
-Path = /5E475532/5E54028C
-Reference = RV4;
-ValeurCmp = 10k;
-IdModule  = Potentiometers:Potentiometer_Trimmer_Bourns_PV36W;
+TimeStamp = 5E89C1B5
+Path = /5E8C1704/5E8C5E28
+Reference = C6;
+ValeurCmp = 10n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E88DC26
-Path = /5E475532/5E56CD05
-Reference = RV7;
+TimeStamp = 5E8658AF
+Path = /5E475532/5E5A553B
+Reference = C8;
+ValeurCmp = 10n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E8658C4
+Path = /5E5B9865/5E6430A0
+Reference = C9;
+ValeurCmp = 10n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E8658D9
+Path = /5E5B9865/5E645411
+Reference = C10;
+ValeurCmp = 10n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E8659CF
+Path = /5E5B9865/5E64B7D5
+Reference = C13;
+ValeurCmp = 10n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E8659F9
+Path = /5E222DC1/5E27DCDC
+Reference = C15;
+ValeurCmp = 10n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E882DBE
+Path = /5E222DC1/5E264F0B
+Reference = C17;
+ValeurCmp = 10n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865A38
+Path = /5E2BE1AD/5E3101FB
+Reference = C18;
+ValeurCmp = 10n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865A62
+Path = /5E2BE1AD/5E2F5866
+Reference = C20;
+ValeurCmp = 10n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865B0A
+Path = /5E1B03E8/5E1B1451
+Reference = C28;
+ValeurCmp = 220n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865AF5
+Path = /5E1B03E8/5E1B0C4F
+Reference = C27;
+ValeurCmp = 220n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865AE0
+Path = /5E1B03E8/5E1B0940
+Reference = C26;
+ValeurCmp = 220n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865AB6
+Path = /5E05E45F/5E14B03E
+Reference = C24;
+ValeurCmp = 220n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865A4D
+Path = /5E2BE1AD/5E309540
+Reference = C19;
+ValeurCmp = 15n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W3.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865A0E
+Path = /5E222DC1/5E26492A
+Reference = C16;
+ValeurCmp = 15n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W3.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E89C1F1
+Path = /5E8C1704/5E8C6F87
+Reference = C5;
+ValeurCmp = 470n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W4.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EAF68A7
+Path = /5E05E45F/5E0DFE7F
+Reference = C23;
+ValeurCmp = 680p polystyrene;
+IdModule  = Capacitor_THT:C_Axial_L12.0mm_D6.5mm_P15.00mm_Horizontal;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865A8C
+Path = /5E05E45F/5E0DE040
+Reference = C22;
+ValeurCmp = 680p polystyrene;
+IdModule  = Capacitor_THT:C_Axial_L12.0mm_D6.5mm_P15.00mm_Horizontal;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E89C22D
+Path = /5E8C1704/5E8C73D2
+Reference = C4;
+ValeurCmp = 100n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E89C179
+Path = /5E8C1704/5E8C6060
+Reference = C7;
+ValeurCmp = 100n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E8A058C
+Path = /5E5B9865/5E79D5E8
+Reference = C14;
+ValeurCmp = 100n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865A77
+Path = /5E05E45F/5E071F8B
+Reference = C21;
+ValeurCmp = 100n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865ACB
+Path = /5E05E45F/5E154373
+Reference = C25;
+ValeurCmp = 100n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA0AAC2
+Path = /5E1B03E8/5E21EF44
+Reference = C33;
+ValeurCmp = 100n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E88C689
+Path = /5E8C1704/5E8C7865
+Reference = C1;
+ValeurCmp = 1u;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W7.2mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E865831
+Path = /5E8C1704/5E8C79CB
+Reference = C2;
+ValeurCmp = 22n;
+IdModule  = Capacitor_THT:C_Rect_L7.2mm_W2.5mm_P5.00mm_FKS2_FKP2_MKS2_MKP2;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA0A5AF
+Path = /5E1B03E8/5E1E3E6A
+Reference = C34;
+ValeurCmp = 470u 25V;
+IdModule  = Capacitor_THT:CP_Radial_D10.0mm_P5.00mm;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E867231
+Path = /5E475532/5E476048
+Reference = SW21;
+ValeurCmp = SW_Rotary2x6;
+IdModule  = Button_Switch_THT:SR2612F-0304-18R0B-D8-N;
+EndCmp
+
+BeginCmp
+TimeStamp = 5EA8FD9B
+Path = /5E475532/5EB1EF45
+Reference = RV7-1;
 ValeurCmp = 47k;
 IdModule  = Potentiometers:Potentiometer_Trimmer_Bourns_PV36W;
 EndCmp
 
 BeginCmp
+TimeStamp = 5EA8EB85
+Path = /5E475532/5EAE5FD2
+Reference = R46-1;
+ValeurCmp = 390k;
+IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
+EndCmp
+
+BeginCmp
 TimeStamp = 5EA6899C
 Path = 
-Reference = REF**;
+Reference = [NoRef];
 ValeurCmp = SolderWirePad_1x01_Drill1.2mm;
 IdModule  = Connector_Wire:SolderWirePad_1x01_Drill1.2mm;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E866FFF
-Path = /5E475532/5EC3FB57
-Reference = RV27;
-ValeurCmp = 4.7kLOG;
-IdModule  = 4ms_Potentiometer:Pot_16mm_NoDet_RV16AF-4A;
-EndCmp
-
-BeginCmp
 TimeStamp = 5EA6DA16
 Path = 
-Reference = REF**;
+Reference = [NoRef];
 ValeurCmp = SolderWirePad_1x01_Drill1.2mm;
 IdModule  = Connector_Wire:SolderWirePad_1x01_Drill1.2mm;
 EndCmp
@@ -89,10 +305,42 @@ IdModule  = MountingHole:MountingHole_3.2mm_M3;
 EndCmp
 
 BeginCmp
+TimeStamp = 5E8670FE
+Path = /5E475532/5E4793CB
+Reference = SW2;
+ValeurCmp = RANGE;
+IdModule  = MyKi_TH_Panel_Controls:SW_Rotary4+12;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E88DC11
+Path = /5E475532/5E54028C
+Reference = RV4;
+ValeurCmp = 10k;
+IdModule  = Potentiometers:Potentiometer_Trimmer_Bourns_PV36W;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E88DC26
+Path = /5E475532/5E56CD05
+Reference = RV7;
+ValeurCmp = 47k;
+IdModule  = Potentiometers:Potentiometer_Trimmer_Bourns_PV36W;
+EndCmp
+
+BeginCmp
+TimeStamp = 5E866FFF
+Path = /5E475532/5EC3FB57
+Reference = RV27;
+ValeurCmp = 4.7kLOG;
+IdModule  = 4ms_Potentiometer:Pot_16mm_NoDet_RV16AF-4A;
+EndCmp
+
+BeginCmp
 TimeStamp = 5E867153
 Path = /5E475532/5E4ABA98
 Reference = SW6;
-ValeurCmp = VCO2 MODE;
+ValeurCmp = SW_DPTT_SELECTOR;
 IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
 EndCmp
 
@@ -100,7 +348,7 @@ BeginCmp
 TimeStamp = 5E898394
 Path = /5E5B9865/5E95BE3D
 Reference = SW9;
-ValeurCmp = ENV TRIGGER;
+ValeurCmp = TRIGGER;
 IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
 EndCmp
 
@@ -108,7 +356,7 @@ BeginCmp
 TimeStamp = 5E908E59
 Path = /5E5B9865/5F2DFAB2
 Reference = SW8;
-ValeurCmp = ENV SUSTAIN;
+ValeurCmp = SUSTAIN;
 IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
 EndCmp
 
@@ -116,7 +364,7 @@ BeginCmp
 TimeStamp = 5E8671CE
 Path = /5E475532/5EC8F4DB
 Reference = SW13;
-ValeurCmp = THUMBWEEL DST;
+ValeurCmp = THUMBWEEL;
 IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
 EndCmp
 
@@ -124,7 +372,7 @@ BeginCmp
 TimeStamp = 5E8950EC
 Path = /5E475532/5EC4EDF0
 Reference = SW12;
-ValeurCmp = THUMBWHEEL SRC;
+ValeurCmp = SOURCE;
 IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
 EndCmp
 
@@ -140,7 +388,7 @@ BeginCmp
 TimeStamp = 5EA5E869
 Path = /5E475532/5E4C21F7
 Reference = SW4;
-ValeurCmp = SUB OSC FIRST;
+ValeurCmp = SW_DPTT_SELECTOR;
 IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
 EndCmp
 
@@ -148,7 +396,7 @@ BeginCmp
 TimeStamp = 5EA5E7E6
 Path = /5E475532/5E4BC6EF
 Reference = SW3;
-ValeurCmp = VCO1 SHAPE;
+ValeurCmp = SW_DPTT_SELECTOR;
 IdModule  = Buttons_Switches_ThroughHole:G-1128S-1110;
 EndCmp
 
@@ -164,7 +412,7 @@ BeginCmp
 TimeStamp = 5E8B3EBD
 Path = /5E5B9865/5E6E5015
 Reference = SW7;
-ValeurCmp = ENV ADSR;
+ValeurCmp = SW_SPDT;
 IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
 EndCmp
 
@@ -172,7 +420,7 @@ BeginCmp
 TimeStamp = 5E86713D
 Path = /5E475532/5E4C83B7
 Reference = SW5;
-ValeurCmp = SUB OSC SEC;
+ValeurCmp = SW_SPDT;
 IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
 EndCmp
 
@@ -180,7 +428,7 @@ BeginCmp
 TimeStamp = 5EA4CD14
 Path = /5E05E45F/5E119FA2
 Reference = SW11;
-ValeurCmp = VCF MODE;
+ValeurCmp = SW_SPDT;
 IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
 EndCmp
 
@@ -188,7 +436,7 @@ BeginCmp
 TimeStamp = 5E884396
 Path = /5E5B9865/5E83D5A9
 Reference = SW20-ENV-TO-KEYB1;
-ValeurCmp = ENV MOD KBD;
+ValeurCmp = SW_SPDT;
 IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
 EndCmp
 
@@ -196,7 +444,7 @@ BeginCmp
 TimeStamp = 5EA4A784
 Path = /5E475532/5E48280C
 Reference = SW14;
-ValeurCmp = VCO2 MOD KBD;
+ValeurCmp = SW_SPDT;
 IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
 EndCmp
 
@@ -204,7 +452,7 @@ BeginCmp
 TimeStamp = 5E8671F4
 Path = /5E475532/5E483096
 Reference = SW15;
-ValeurCmp = VCO2 MOD VCO1;
+ValeurCmp = SW_SPDT;
 IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
 EndCmp
 
@@ -212,7 +460,7 @@ BeginCmp
 TimeStamp = 5E867207
 Path = /5E475532/5E483FEC
 Reference = SW16;
-ValeurCmp = VCO2 MOD VCF;
+ValeurCmp = SW_SPDT;
 IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
 EndCmp
 
@@ -220,7 +468,7 @@ BeginCmp
 TimeStamp = 5E86721A
 Path = /5E475532/5E483FF2
 Reference = SW17;
-ValeurCmp = VCO2 MOD VCA;
+ValeurCmp = SW_SPDT;
 IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
 EndCmp
 
@@ -228,7 +476,7 @@ BeginCmp
 TimeStamp = 5E86726D
 Path = /5E5B9865/5E881667
 Reference = SW18-ENV-TO-VCF1;
-ValeurCmp = ENV MOD VCF;
+ValeurCmp = SW_SPDT;
 IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
 EndCmp
 
@@ -236,7 +484,7 @@ BeginCmp
 TimeStamp = 5E867280
 Path = /5E5B9865/5E85AAE1
 Reference = SW19-ENV-TO-VCO1;
-ValeurCmp = ENV MOD VCO2;
+ValeurCmp = SW_SPDT;
 IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
 EndCmp
 
@@ -244,7 +492,7 @@ BeginCmp
 TimeStamp = 5EA47AA2
 Path = /5E05E45F/5E076B1B
 Reference = SW10;
-ValeurCmp = VCF KBD MOD;
+ValeurCmp = SW_SPST;
 IdModule  = Buttons_Switches_ThroughHole:GF-624-6014;
 EndCmp
 
@@ -374,14 +622,6 @@ Path = /5E8C1704/5E8F2B9E
 Reference = J5;
 ValeurCmp = Conn_01x02_Male;
 IdModule  = Connector_PinHeader_2.54mm:PinHeader_1x02_P2.54mm_Vertical;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E89C1F1
-Path = /5E8C1704/5E8C6F87
-Reference = C5;
-ValeurCmp = 470n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
 EndCmp
 
 BeginCmp
@@ -604,7 +844,7 @@ BeginCmp
 TimeStamp = 5E8B57C3
 Path = /5E5B9865/5E675EDC
 Reference = C12;
-ValeurCmp = 4.7u;
+ValeurCmp = 4.7u 25V;
 IdModule  = Capacitor_THT:CP_Radial_D5.0mm_P2.50mm;
 EndCmp
 
@@ -630,214 +870,6 @@ Path = /5E8C1704/5E9CEB8A
 Reference = R53;
 ValeurCmp = 100;
 IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E8670FE
-Path = /5E475532/5E4793CB
-Reference = SW2;
-ValeurCmp = RANGE;
-IdModule  = MyKi_TH_Panel_Controls:SW_Rotary4+12;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E88C689
-Path = /5E8C1704/5E8C7865
-Reference = C1;
-ValeurCmp = 1u;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865831
-Path = /5E8C1704/5E8C79CB
-Reference = C2;
-ValeurCmp = 22n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E89C22D
-Path = /5E8C1704/5E8C73D2
-Reference = C4;
-ValeurCmp = 100n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E89C1B5
-Path = /5E8C1704/5E8C5E28
-Reference = C6;
-ValeurCmp = 10n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E89C179
-Path = /5E8C1704/5E8C6060
-Reference = C7;
-ValeurCmp = 100n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E8658AF
-Path = /5E475532/5E5A553B
-Reference = C8;
-ValeurCmp = 10n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E8658C4
-Path = /5E5B9865/5E6430A0
-Reference = C9;
-ValeurCmp = 10n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E8658D9
-Path = /5E5B9865/5E645411
-Reference = C10;
-ValeurCmp = 10n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E8659CF
-Path = /5E5B9865/5E64B7D5
-Reference = C13;
-ValeurCmp = 10n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E8A058C
-Path = /5E5B9865/5E79D5E8
-Reference = C14;
-ValeurCmp = 100n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E8659F9
-Path = /5E222DC1/5E27DCDC
-Reference = C15;
-ValeurCmp = 10n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865A0E
-Path = /5E222DC1/5E26492A
-Reference = C16;
-ValeurCmp = 15n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E882DBE
-Path = /5E222DC1/5E264F0B
-Reference = C17;
-ValeurCmp = 10n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865A38
-Path = /5E2BE1AD/5E3101FB
-Reference = C18;
-ValeurCmp = 10n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865A4D
-Path = /5E2BE1AD/5E309540
-Reference = C19;
-ValeurCmp = 15n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865A62
-Path = /5E2BE1AD/5E2F5866
-Reference = C20;
-ValeurCmp = 10n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865A77
-Path = /5E05E45F/5E071F8B
-Reference = C21;
-ValeurCmp = 100n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865A8C
-Path = /5E05E45F/5E0DE040
-Reference = C22;
-ValeurCmp = 680p;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E884E42
-Path = /5E05E45F/5E0DFE7F
-Reference = C23;
-ValeurCmp = 680p;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865AB6
-Path = /5E05E45F/5E14B03E
-Reference = C24;
-ValeurCmp = 220n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865ACB
-Path = /5E05E45F/5E154373
-Reference = C25;
-ValeurCmp = 100n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865AE0
-Path = /5E1B03E8/5E1B0940
-Reference = C26;
-ValeurCmp = 220n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865AF5
-Path = /5E1B03E8/5E1B0C4F
-Reference = C27;
-ValeurCmp = 220n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E865B0A
-Path = /5E1B03E8/5E1B1451
-Reference = C28;
-ValeurCmp = 220n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5EA0AAC2
-Path = /5E1B03E8/5E21EF44
-Reference = C33;
-ValeurCmp = 100n;
-IdModule  = Capacitor_THT:C_Disc_D5.0mm_W2.5mm_P5.00mm;
 EndCmp
 
 BeginCmp
@@ -1057,7 +1089,7 @@ IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E89C5D4
+TimeStamp = 5EB01EC1
 Path = /5E8C1704/5E957449
 Reference = R37;
 ValeurCmp = 1M;
@@ -1121,7 +1153,7 @@ IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E8663C6
+TimeStamp = 5EA8FF51
 Path = /5E475532/5E51F9E7
 Reference = R46;
 ValeurCmp = 390k;
@@ -1497,7 +1529,7 @@ IdModule  = Resistor_THT:R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal;
 EndCmp
 
 BeginCmp
-TimeStamp = 5E86696F
+TimeStamp = 5EAF6781
 Path = /5E05E45F/5E0C230A
 Reference = R110;
 ValeurCmp = 100;
@@ -1843,7 +1875,7 @@ EndCmp
 BeginCmp
 TimeStamp = 5EA5DEEF
 Path = /5E8C1704/5E936F79
-Reference = RV1-TUNE1;
+Reference = RV1;
 ValeurCmp = 100k;
 IdModule  = Potentiometers:Potentiometer_Trimmer_Bourns_PV36W;
 EndCmp
@@ -1886,14 +1918,6 @@ Path = /5E5B9865/5E66825F
 Reference = RV9;
 ValeurCmp = 1MLOG;
 IdModule  = 4ms_Potentiometer:Pot_16mm_NoDet_RV16AF-4A;
-EndCmp
-
-BeginCmp
-TimeStamp = 5E867231
-Path = /5E475532/5E476048
-Reference = SW21;
-ValeurCmp = SW_Rotary2x6;
-IdModule  = MyKi_TH_Panel_Controls:SW_Rotary4+12;
 EndCmp
 
 BeginCmp
@@ -2076,7 +2100,7 @@ BeginCmp
 TimeStamp = 5E8B56BD
 Path = /5E8C1704/5EA4781A
 Reference = C3;
-ValeurCmp = 100u;
+ValeurCmp = 100u 25V;
 IdModule  = Capacitor_THT:CP_Radial_D5.0mm_P2.50mm;
 EndCmp
 
@@ -2084,7 +2108,7 @@ BeginCmp
 TimeStamp = 5E8B5740
 Path = /5E5B9865/5E6D9634
 Reference = C11;
-ValeurCmp = 1u;
+ValeurCmp = 1u 25V;
 IdModule  = Capacitor_THT:CP_Radial_D5.0mm_P2.50mm;
 EndCmp
 
@@ -2092,7 +2116,7 @@ BeginCmp
 TimeStamp = 5E8B5846
 Path = /5E1B03E8/5E1DE1C0
 Reference = C29;
-ValeurCmp = 4.7u;
+ValeurCmp = 4.7u 10V;
 IdModule  = Capacitor_THT:CP_Radial_D5.0mm_P2.50mm;
 EndCmp
 
@@ -2100,7 +2124,7 @@ BeginCmp
 TimeStamp = 5E8B58C9
 Path = /5E1B03E8/5E1B053C
 Reference = C30;
-ValeurCmp = 4.7u;
+ValeurCmp = 4.7u 35V;
 IdModule  = Capacitor_THT:CP_Radial_D5.0mm_P2.50mm;
 EndCmp
 
@@ -2108,7 +2132,7 @@ BeginCmp
 TimeStamp = 5EA0A8C1
 Path = /5E1B03E8/5E1E2474
 Reference = C31;
-ValeurCmp = 4.7u;
+ValeurCmp = 4.7u 10V;
 IdModule  = Capacitor_THT:CP_Radial_D5.0mm_P2.50mm;
 EndCmp
 
@@ -2116,15 +2140,7 @@ BeginCmp
 TimeStamp = 5EA0A738
 Path = /5E1B03E8/5E1E483E
 Reference = C32;
-ValeurCmp = 4.7u;
-IdModule  = Capacitor_THT:CP_Radial_D5.0mm_P2.50mm;
-EndCmp
-
-BeginCmp
-TimeStamp = 5EA0A5AF
-Path = /5E1B03E8/5E1E3E6A
-Reference = C34;
-ValeurCmp = 470u;
+ValeurCmp = 4.7u 25V;
 IdModule  = Capacitor_THT:CP_Radial_D5.0mm_P2.50mm;
 EndCmp
 
